[package]
name = "apds9151"
version = "0.1.0"
edition = "2021"
authors = ["Cody Belcher <cody.t.belcher@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["apds-9151", "proximity", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7" }

[profile.release]
lto = true