[package]
name = "apds9151"
version = "0.1.1"
edition = "2021"
authors = ["Cody Belcher <cody.t.belcher@gmail.com>"]
repository = "https://github.com/codytrey/apds9151"
description = "platform agnostic Rust driver for the APDS9151 Digital Proximity and RGB Color I2C Sensor"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["apds-9151", "proximity", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/codytrey/apds9151"
documentation = "https://docs.rs/apds9151"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7" }

[profile.release]
lto = true